feat: Implement authentication endpoints and deploy service
- Added authentication routes for login, signup, logout, and user info retrieval in `auth_routes.py`.
- Integrated ROBLE client for user authentication and session management.
- Developed a deploy service in `deploy_service.py` to handle project deployment from GitHub, including cloning, building Docker images, and running containers.
- Created project management endpoints in `projects_routes.py` for creating, retrieving, updating, and deleting projects, along with container management.
- Implemented a ROBLE client in `roble_client.py` for database operations and user management.
- Added a test script `test_port.py` to verify port availability for container deployment.

--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -5,11 +5,17 @@ WORKDIR /app
 # Instalar dependencias Python necesarias
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install flask requests flask-cors docker
 
-COPY manager.py . 
+# Copiar todos los archivos Python del manager
+COPY manager.py .
+COPY roble_client.py .
+COPY auth_routes.py .
+COPY projects_routes.py .
+COPY deploy_service.py .
 
 EXPOSE 5000
 
