feat: Add activity monitoring service for container inactivity management
- Introduced ActivityMonitor class to track container activity and handle auto-shutdown after 30 minutes of inactivity.
- Updated deploy_service.py to integrate Nginx configuration creation for deployed projects.
- Modified manager.py to initialize and start the activity monitor.
- Enhanced projects_routes.py to track container activity and manage inactivity.
- Updated Dockerfile to include activity_monitor.py.
- Added Nginx configuration files for dynamic project routing and rate limiting.
- Removed outdated planning document.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - ROBLE_CONTRACT=${ROBLE_CONTRACT}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock  # Acceso a Docker
+      - ./nginx/conf.d:/nginx_configs  # Directorio compartido para configuraciones Nginx
     networks:
       - microservices_network
     privileged: true  # Permisos para manejar Docker
@@ -63,6 +64,21 @@ services:
       - microservices_network
     depends_on:
       - manager
+
+  # Nginx Reverse Proxy - Enrutamiento de subdominios
+  nginx-proxy:
+    image: nginx:alpine
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    networks:
+      - microservices_network
+    depends_on:
+      - manager
+    restart: unless-stopped
 
   # Filter Service - Microservicio de Filtrado
   filter-service:
